<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/favorite_note"
        app:showAsAction="always"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_ios_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_note"
        app:showAsAction="always"/>

    <item
        android:id="@+id/submit"
        android:visible="false"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/submit"
        app:showAsAction="always"/>

</menu>