<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/profile_menu"
            app:title="Notes" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:id="@+id/image_frame"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture"
                android:src="@color/colorPrimary"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"/>
        </FrameLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="Name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_frame"
            app:layout_constraintTop_toTopOf="@id/image_frame" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="Email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@id/image_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_frame"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <TextView
            android:id="@+id/update_pass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_password"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/image_frame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:hint="New Password"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_pass_text" />

        <EditText
            android:id="@+id/confirm_new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Confirm New Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/new_password"
            app:layout_constraintStart_toStartOf="@+id/new_password"
            app:layout_constraintTop_toBottomOf="@id/new_password"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintTop_toBottomOf="@id/confirm_new_password"
            app:layout_constraintStart_toStartOf="@id/confirm_new_password"
            app:layout_constraintEnd_toEndOf="@id/confirm_new_password"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>